--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "ceorater-backend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Backend for CEORater dashboard to fetch live data.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "sync-db": "node sync-db.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "csv-parse": "^5.5.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.9"
+    "google-auth-library": "^9.2.0",
+    "googleapis": "^128.0.0",
+    "node-fetch": "^2.6.9",
+    "pg": "^8.11.3"
   }
 }
