--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "ceorater-backend",
-  "version": "1.1.0",
-  "description": "Backend for CEORater dashboard to fetch live data.",
+  "version": "2.0.0",
+  "description": "Enterprise-grade backend for CEORater dashboard.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "sync-db": "node sync-db.js"
+    "db:init": "node init-db.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "google-auth-library": "^9.2.0",
     "googleapis": "^128.0.0",
     "node-fetch": "^2.6.9",
     "pg": "^8.11.3"
