--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,11 @@
 {
   "name": "CEORater",
   "short_name": "CEORater",
+  "description": "NASDAQ 100 CEO Performance & Compensation Analytics",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#4338ca",
   "icons": [
     {
       "src": "android-chrome-192x192.png",
@@ -12,8 +17,5 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
-  "display": "standalone"
+  ]
 }
