--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,12 @@
   "name": "CEORater",
   "short_name": "CEORater",
   "description": "NASDAQ 100 CEO Performance & Compensation Analytics",
+  "id": "/?source=pwa",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4338ca",
+  "orientation": "any",
   "icons": [
     {
       "src": "android-chrome-192x192.png",
@@ -16,6 +18,20 @@
       "src": "android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "screenshots/screenshot-desktop-1.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
+    },
+    {
+      "src": "screenshots/screenshot-mobile-1.png",
+      "sizes": "720x1280",
+      "type": "image/png",
+      "form_factor": "narrow"
     }
   ]
 }
