--- a/.github/workflows/scheduled_download.yml
+++ b/.github/workflows/scheduled_download.yml
@@ -1,45 +1,38 @@
 name: Download Daily CEORater Data
+
 on:
   workflow_dispatch:
   schedule:
     # Runs at 5:00 PM EST (21:00 UTC) every Monday through Friday
     - cron: '0 21 * * 1-5'
+
 permissions:
   contents: write
-  pull-requests: write
+
 jobs:
   download-data:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
+
       - name: Run data download script
         run: python download_ceodata.py
         
-      - name: Create Pull Request for data changes
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: 'chore: updated daily ceorater data'
-          title: 'Daily CEORater Data Update'
-          body: |
-            Automated daily download of CEORater data
-            
-            - Downloaded fresh data from CEORater API
-            - Updated JSON files with latest information
-            - Run on: ${{ github.run_id }}
-          branch: data-update-${{ github.run_number }}
-          delete-branch: true
-          assignees: ${{ github.actor }}
-          reviewers: ${{ github.actor }}
+      - name: Commit and push if data changed
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "actions@github.com"
+          git add -A
+          git diff --quiet && git diff --staged --quiet || git commit -m "chore: updated daily ceorater data"
+          git push
