--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "airtable": "^0.12.2",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "googleapis": "^128.0.0",
+    "helmet": "^7.1.0",
     "node-fetch": "^2.6.9",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "validator": "^13.11.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
