--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "helmet": "^7.1.0",
     "node-fetch": "^2.6.9",
     "pg": "^8.11.3",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "tailwindcss": "^3.4.0"
   },
   "engines": {
     "node": ">=18.0.0"
   }
 }
+
 
